fixing header spacing, hero margin gap

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,7 +2,7 @@
 
 .header {
   background: var(--black);
-  position: fixed;
+  position:sticky;
   top: 0;
   width: 100%;
   z-index: 2000;
@@ -41,7 +41,7 @@
 }
 
 .logo-text {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-weight: 700;
   background: var(--primary-gradient);
   -webkit-background-clip: text;
@@ -55,7 +55,8 @@
   background: var(--primary-gradient);
   border: none;
   color: white;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.3rem;
+  margin-right: 10px;
   border-radius: 50px;
   cursor: pointer;
   font-size: 1.1rem;
@@ -114,6 +115,7 @@
   display: flex;
   gap: 1.5rem;
   align-items: center;
+  margin-right: 510px;
 }
 
 .nav-link {
